--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-file-include": "^2.1.0",
     "gulp-imagemin": "^5.0.3",
+    "gulp-plumber": "^1.2.1",
     "gulp-rename": "^1.4.0",
     "gulp-rigger": "^0.5.8",
     "gulp-sass": "^4.0.2",
